<resources>
    <string name="app_name">Bits and Pizzas</string>
    <string name="create_order">Create Order</string>
    <string name="create_order_title">Create Order</string>
    <string name="action_share">Share</string>

    <string name="home_tab">Home</string>
    <string name="pizza_tab">Pizzas</string>
    <string name="pasta_tab">Pasta</string>
    <string name="store_tab">Stores</string>
    <string name="company_name">Bits and Pizzas</string>
    <string name="home_text">Since we opened our doors in 2017, Bits and Pizzas
        has built its reputation as one of Americas best Italian-Digital
        restaurants. Some people believe eating out is about being with your
        friends and family. We believe that good food is best enjoyed while
        staring at your phone.</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="order_name_hint">Please enter your name</string>
    <string name="order_details_hint">Please enter your order</string>
    <string name="test_text">Since we opened our doors in 2017, Bits and Pizzas
        has built its reputation as one of Americas best Italian-Digital
        restaurants. Some people believe eating out is about being with your
        friends and family. We believe that good food is best enjoyed while
        staring at your phone.Since we opened our doors in 2017, Bits and Pizzas
        has built its reputation as one of Americas best Italian-Digital
        restaurants. Some people believe eating out is about being with your
        friends and family. We believe that good food is best enjoyed while
        staring at your phone.Since we opened our doors in 2017, Bits and Pizzas
        has built its reputation as one of Americas best Italian-Digital
        restaurants. Some people believe eating out is about being with your
        friends and family. We believe that good food is best enjoyed while
        staring at your phone.Since we opened our doors in 2017, Bits and Pizzas
        has built its reputation as one of Americas best Italian-Digital
        restaurants. Some people believe eating out is about being with your
        friends and family. We believe that good food is best enjoyed while
        staring at your phone.Since we opened our doors in 2017, Bits and Pizzas
        has built its reputation as one of Americas best Italian-Digital
        restaurants. Some people believe eating out is about being with your
        friends and family. We believe that good food is best enjoyed while
        staring at your phone.Since we opened our doors in 2017, Bits and Pizzas
        has built its reputation as one of Americas best Italian-Digital
        restaurants. Some people believe eating out is about being with your
        friends and family. We believe that good food is best enjoyed while
        staring at your phone.Since we opened our doors in 2017, Bits and Pizzas
        has built its reputation as one of Americas best Italian-Digital
        restaurants. Some people believe eating out is about being with your
        friends and family. We believe that good food is best enjoyed while
        staring at your phone.Since we opened our doors in 2017, Bits and Pizzas
        has built its reputation as one of Americas best Italian-Digital
        restaurants. Some people believe eating out is about being with your
        friends and family. We believe that good food is best enjoyed while
        staring at your phone.Since we opened our doors in 2017, Bits and Pizzas
        has built its reputation as one of Americas best Italian-Digital
        restaurants. Some people believe eating out is about being with your
        friends and family. We believe that good food is best enjoyed while
        staring at your phone.</string>

    <string-array name="pizzas">
        <item>Diavolo</item>
        <item>Funghi</item>
    </string-array>

    <string-array name="pasta">
        <item>Spaghetti Bolognese</item>
        <item>Lasagne</item>
    </string-array>

    <string-array name="stores">
        <item>Cambridge</item>
        <item>Sebastopol</item>
    </string-array>

</resources>
